# prompt-migration-for-large-language-model-agility

./: .gitignore  README.md
features-examples/: generate_new_prompt_using_metaprompt.ipynb  (+2 more)
use-case-examples/rag-investment-analysis-assistant/: Readme.md  pyproject.toml
use-case-examples/rag-investment-analysis-assistant/data/: selected_samples.csv
use-case-examples/rag-investment-analysis-assistant/libraries/deep-eval-metrics/: README.md
use-case-examples/rag-investment-analysis-assistant/libraries/deep-eval-metrics/faithfulness/: faithfulness.py
use-case-examples/rag-investment-analysis-assistant/libraries/deep-eval-metrics/summarization/: summarization.py  template.py
use-case-examples/rag-investment-analysis-assistant/libraries/iaa/: configs.py  embedUpload.py  sectionsplitter.py  textSplitter.py  text_summarization.py  text_summary.py  textractPdfParser.py  titan_text_emb.py
use-case-examples/rag-investment-analysis-assistant/libraries/ragas-evaluation/: Makefile  README.md
use-case-examples/rag-investment-analysis-assistant/notebooks/: 01_Indexing Pipeline Notebook.ipynb  02_Query-rewrite_Retrieval_and_Generation_Notebook_OpenAI.ipynb  03_Prompt_migration.ipynb  04_Query-rewrite_Retrieval_and_Generation_Notebook_Claude3.ipynb  05a_Evaluate_QnA_DeepEval.ipynb  05b_Evaluate_QnA_RAGAS.ipynb  06_Generate_Comparision_Report.ipynb
use-case-examples/rag-investment-analysis-assistant/outputs/rag_outputs/: output_claude.csv  output_mistral.csv  output_openai.csv
use-case-examples/rag-investment-analysis-assistant/src/: config.py  pricing.py
(+84 files in other folders)
