[tool.poetry]
name = "iaa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "libraries/iaa" },
    { include = "libraries/iaa/answer_generation" },
    { include = "libraries/iaa/experiments" },
    { include = "libraries/iaa/query_transformation" },
    { include = "libraries/iaa/reranker" },
]

[tool.poetry.dependencies]
python = "^3.9"
botocore = "^1.34.8"
amazon-textract-textractor = "1.3.5"
langchain = "0.1.9"
opensearch-py = "^2.4.2"
requests-aws4auth = "^1.2.3"
llama-index = "^0.9.22"
lxml = "^5.1.0"
pillow = "10.2"
langchain-core = "0.1.35"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
known_first_party = ["utils", "model", "retriever", "messaging"]


[tool.black]
target-version = ['py39']
line-length = 120

pythonpath = [
    ".",    # Adds the project's root directory and makes the `infra` package importable
    "./libraries/",
    "./libraries/iaa/",
]